2016-10-31 20:34 UTC+0100 Viktor Szakats (vszakats users.noreply.github.com)   * contrib/hbdoc/_genhtml.prg   * contrib/hbdoc/hbdoc.css   * contrib/hbdoc/hbdoc.prg     + implement SEEALSO links accross components (f.e DoY() in hbmisc)     + autodetect function references inside doc text and convert them       to links (also accross components) and display them as code     + autodetect header file references and convert the to links       to the GitHub repository matching the revision of the doc     + convert `--` to emdash     ! refine the way .T. and .F. are detected     ! avoid wrap inside tables
  * utils/hbmk2/hbmk2.prg
    + `-sanitize` option will now also:
      - remove line-ending whitespaces
      - remove BOM
      - remove duplicate file-ending EOLs
      - add file-ending EOL if missing

  * contrib/hbmisc/doc/en/dates2.txt
  * contrib/hbmisc/doc/en/ht_conv.txt
  * contrib/hbnf/doc/en/vertmenu.txt
  * contrib/rddads/doc/en/readme.txt
  * doc/en/array.txt
  * doc/en/var.txt
    ! various minor doc fixes

--- a/contrib/hbdoc/hbdoc.css
+++ b/contrib/hbdoc/hbdoc.css
@@ -316,6 +316,7 @@ p {
   overflow: scroll;
   margin: 16px;
   width: 80%;
+  white-space: nowrap;
 }
 
 .d-t0 div:first-child {
